--- a/3-BIF#2024-2025/INFORMATICA/HTML/CSS/Ex40.css
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/CSS/Ex40.css
@@ -1,5 +1,5 @@
 canvas {
-  background-color: grey;
+  background-color: aquamarine;
   display: block;
   margin: 40px auto;
   border: 5px solid black;
