--- a/3-BIF#2024-2025/INFORMATICA/HTML/CSS/Ex14.css
+++ b/3-BIF#2024-2025/INFORMATICA/HTML/CSS/Ex14.css
@@ -10,9 +10,13 @@ REGOLE GENERALI DA IMPLEMENTARE nel CSS:
   font-family: "Times New Roman", Times, serif;
   font-size: 30 px;
   text-align: center;
+  color: ;
 }
 .P2 {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  text-align: right;
+  color: blue;
 }
 .P3 {
 }
